--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             </form>
         </div>
         <div class="color-box">
+            <!-- Color picker here -->
             <div class="colors"></div>
             <div class="colors"></div>
             <div class="colors"></div>
@@ -35,3 +36,4 @@
     <script src="/js/script.js"></script>
 </body>
 </html>
+
