--- a/index.html
+++ b/index.html
@@ -8,32 +8,26 @@
     <link rel="stylesheet" href="/css/main.min.css">
 </head>
 <body>
+        <nav>
+            <h3>Color Scheme Generator</h3>
+        </nav>
     <div class="container">
-        <div>
             <form action="" id="colorForm">
                 <input id="userInput" type="color">
                 <select name="schemeType" id="schemeType">
                     <option value="monochrome">Monochrome</option>
-                    <option value="monochrome-Dark">Monochrome Dark</option>
+                    <option value="monochrome-dark">Monochrome Dark</option>
                     <option value="monochrome-light ">Monochrome Light</option>
                     <option value="analogic">Analogic</option>
                     <option value="complement">Complement</option>
                     <option value="analogic-complement">Analogic Complement</option>
                 </select>
-                <button id="getBtn">Get color scheme</button>
+                <button id="getBtn" class="getBtn">Get color scheme</button>
             </form>
-        </div>
         <div class="color-box">
             <!-- Color picker here -->
-            <div class="colors"></div>
-            <div class="colors"></div>
-            <div class="colors"></div>
-            <div class="colors"></div>
-            <div class="colors"></div>
-            <div class="colors"></div>
         </div>
     </div>
     <script src="/js/script.js"></script>
 </body>
 </html>
-
