--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Siaw A. Nicholas">
+    <meta name="description" content="Free color scheme generator">
+    <meta name="keywords" content="color, scheme, color scheme,color generator">
     <title>Color-Gen</title>
     <link rel="stylesheet" href="/css/main.min.css">
 </head>
