automate with gulp

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Free color scheme generator">
     <meta name="keywords" content="color, scheme, color scheme,color generator">
     <title>Color-Gen</title>
-    <link rel="stylesheet" href="/css/main.min.css">
+    <link rel="stylesheet" href="/dist/css/main.css">
 </head>
 <body>
         <nav>
@@ -31,6 +31,6 @@
             <!-- Color picker here -->
         </div>
     </div>
-    <script src="/js/script.js"></script>
+    <script src="/src/js/script.js"></script>
 </body>
 </html>
