--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </nav>
     <div class="container">
       <form action="" id="colorForm">
-        <input id="userInput" type="color" />
+        <input name="userInput" id="userInput" type="color" value="#353535"/>
         <select name="schemeType" id="schemeType">
           <option value="monochrome">Monochrome</option>
           <option value="monochrome-dark">Monochrome Dark</option>
